# guanaco

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  README.md  install.sh  pyproject.toml  test-local.sh
.github/workflows/: ci.yml  release.yml
contrib/: com.guanaco.start.plist  com.oct.start.plist  guanaco-wrapper.sh  guanaco.service  oct.service
docs/plans/: 2026-04-19-multi-account-manager.md
guanaco/: __init__.py  accounts.py  analytics.py  app.py  cache.py  cli.py  client.py  cline_client.py  cmdcode_client.py  concurrency.py  config.py  depletion.py  multi_provider_client.py  opencode_go_client.py  opencode_go_pricing.py  roi.py  umans_client.py  umans_concurrency.py
guanaco/dashboard/: __init__.py  dashboard.py
guanaco/dashboard/templates/: dashboard.html
guanaco/providers/: __init__.py  base.py  custom.py
guanaco/router/: __init__.py  fallback.py  helpers.py  models.py  responses.py  router.py
guanaco/search/: base.py
guanaco/search/providers/: __init__.py  brave.py  cohere.py  exa.py  firecrawl.py  jina.py  searxng.py  serper.py  tavily.py
guanaco/utils/: __init__.py  api_keys.py
tests/: test_accounts.py  test_cache_account_rotation.py  test_cline_provider.py  test_cmdcode_provider.py  test_fallback_stream.py  test_provider_agnostic_startup.py  test_provider_priority.py  test_responses_api.py  test_umans_concurrency.py  test_umans_provider.py
